--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+	copyright 2021 git training
+-->
 <head>
 	<title>exemple </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
