mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 	copyright 2021 git training
+	addinhg changes before rebasing complex
 -->
 <head>
 	<title>Á very respectfull website </title>
