adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <!--
 	copyright 2021 git training
-	addinhg changes before rebasing complex
+	these changes ar from the feature
+	branch bigtrouble
 -->
 <head>
 	<title>Á very respectfull website </title>
@@ -16,10 +17,9 @@
 </head>
 <body>
 	<main class="container">
-	<!-- crappy text -->
+	<!-- Content Goes Here -->
 		<p>
-			crap crap crap
-			poop
+			nothing but trouble
 		</p>
 	</main>
 	<footer class="container">
