mb conflincting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -16,8 +16,10 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- crappy text -->
 		<p>
+			crap crap crap
+			poop
 		</p>
 	</main>
 	<footer class="container">
