adding changes after rebase

--- a/simple.html
+++ b/simple.html
@@ -19,7 +19,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			nothing but trouble
+			lots of trouble in blablabla
 		</p>
 	</main>
 	<footer class="container">
